--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ data/city/Los Angeles/2021-05-31-los-angeles-covid-data.json
 data/covidtracking.com/*
 data/JohnsHopkins/*
 data/NYT/*-historical.csv
+us_city_population_2019_formatter.py
+test_playground.py
+playground.ipynb
