--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ __pycache__
 data/CDC/*
 data/NYT/*
 data/ZeroOneLabs/*
+data/NYT/us-counties-latest.csv
+data/NYT/us-latest.csv
+data/NYT/us-states-latest.csv
