--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.0.1
 dash==1.20.0
 dash-core-components==1.16.0
 dash-html-components==1.1.3
+dash_bootstrap_components==0.12.2
 dash-renderer==1.9.1
 dash-table==4.11.3
 Flask==2.0.1
