Ver 2.1 dev - Changing paradigm
Starting to morph how the code loads - i.e. Chunking data processing into major sections and having the dashboard load those sections based off of the URL. Mainly committing so my IDE will clear out the delta lines for Git (lul).

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@ __pycache__
 data/CDC/*
 data/NYT/*
 data/ZeroOneLabs/*
-data/NYT/us-counties-latest.csv
-data/NYT/us-latest.csv
-data/NYT/us-states-latest.csv
-data/NYT/us-counties-latest.csv
-data/NYT/us-latest.csv
-data/NYT/us-states-latest.csv
+data/NYT/*
+data/NYT/*
+data/NYT/*
