--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ data/CDC/*
 data/NYT/*
 data/ZeroOneLabs/*
 playground.ipynb
+data/NYT/us-counties-latest.csv
+data/NYT/us-latest.csv
+data/NYT/us-states-latest.csv
